--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,13 @@
     <meta name="viewport" 
           content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock title %}</title>
+
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>{%  block content %}{% endblock %}</body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </html>
